All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/SM_Change_Order_Line__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Change Order Line Object is a repository for the search result lines generated from an FCO Search on a Change Order Record. Lines may connect the Change Order to an installed product, stocked serial, or batch/lot record. Change Order lines also connect to Work Orders generated from the FCO results via the FCO Console.</description>
    <label>Change Order Line</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>