All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Batch_Lot2__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Lot2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Change Order Line with Batch Lot.</description>
    <inlineHelpText>This field is used to associate the Change Order Line with Batch Lot.</inlineHelpText>
    <label>Batch/Lot</label>
    <referenceTo>SM_Batch_Lot__c</referenceTo>
    <relationshipLabel>Change Order Lines</relationshipLabel>
    <relationshipName>Change_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>