All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Batch_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Lot_Number__c</fullName>
    <description>This field is used to display Batch Lot Number from associated Stocked Serial/Batch Lot/Installed Product.</description>
    <formula>IF( NOT( ISBLANK( SM_Stocked_Serial__c ) ) , SM_Stocked_Serial__r.SM_Batch_Lot2__r.Name , IF( NOT( ISBLANK( SM_Batch_Lot2__c ) ) , SM_Batch_Lot2__r.Name , IF( NOT( ISBLANK( SM_Installed_Product__c ) ) , SM_Installed_Product__r.SM_Batch_Lot2__r.Name , &apos;&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display Batch Lot Number from associated Stocked Serial/Batch Lot/Installed Product.</inlineHelpText>
    <label>Batch/Lot Number</label>
    <type>Text</type>
</CustomField>