All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Generate_WORD__c.field-meta.xml
<CustomField>
    <fullName>SM_Generate_WORD__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to indicate whether the Work Order needs to be created from the Change Order Line.</description>
    <inlineHelpText>This field is used to indicate whether the Work Order needs to be created from the Change Order Line.</inlineHelpText>
    <label>Generate Work Order?</label>
    <type>Checkbox</type>
</CustomField>