All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Change Order Line with Installed Product.</description>
    <inlineHelpText>This field is used to associate the Change Order Line with Installed Product.</inlineHelpText>
    <label>Installed Product</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>Change Order Lines</relationshipLabel>
    <relationshipName>Change_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>