All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Location__c.field-meta.xml
<CustomField>
    <fullName>SM_Location__c</fullName>
    <description>This field is used to display Location from associated Installed Product or Product Stock of associated Stocked Serial.</description>
    <formula>IF( NOT( ISBLANK( SM_Installed_Product__c ) ) , SM_Installed_Product__r.Site__r.Name , IF(NOT( ISBLANK( SM_Stocked_Serial__c ) ), SM_Stocked_Serial__r.Product_Stock__r.Location__r.Name , &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display Location from associated Installed Product or Product Stock of associated Stocked Serial.</inlineHelpText>
    <label>Location</label>
    <type>Text</type>
</CustomField>