All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Serial_Number__c</fullName>
    <description>This field is used to display Serial Number from associated Installed Product/Stocked Serial.</description>
    <formula>IF( NOT(ISBLANK( SM_Installed_Product__c )) , SM_Installed_Product__r.Serial_Lot_Number__c , IF( NOT(ISBLANK( SM_Stocked_Serial__c )) , SM_Stocked_Serial__r.Name , &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display Serial Number from associated Installed Product/Stocked Serial.</inlineHelpText>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>