All_Component_DX/force-app/main/default/objects/SM_Change_Order_Line__c/fields/SM_Stocked_Serial__c.field-meta.xml
<CustomField>
    <fullName>SM_Stocked_Serial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Change Order Line with Stocked Serial.</description>
    <inlineHelpText>This field is used to associate the Change Order Line with Stocked Serial.</inlineHelpText>
    <label>Stocked Serial</label>
    <referenceTo>Product_Serial__c</referenceTo>
    <relationshipLabel>Change Order Lines</relationshipLabel>
    <relationshipName>Change_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>